Replace all silent fallbacks with explicit errors for correctness
Silent fallbacks that proceed with incorrect semantics are replaced with
clear error messages. The library must either restore with exactly correct
state or fail with a diagnostic message — never silently continue with
wrong data.

Key changes:
- findOrCreateReceiver: throw if receiver missing instead of Objenesis blank
- ReplayState.dummyInstance: throw on allocation failure instead of null
- ThreadRestorer JDI worker: signal error via ReplayState so replay thread
  throws instead of continuing with partial/incorrect locals
- HeapRef resolution: throw if bridge lookup fails instead of returning null
- setFrameLocals: throw on type mismatch or set failure instead of skipping
- JdiHeapWalker: propagate capture/field/collection/map errors instead of
  storing empty snapshots or partial results
- HeapRestorer: throw on collection add or field set failures
- HeapWalker: throw on inaccessible fields during capture
- ThreadFreezer: throw on local capture failures instead of best-effort
- OperandStackChecker: return error message instead of null on analysis failure
- DurableTransformer: propagate instrumentation failures instead of skipping

https://claude.ai/code/session_018YREbi77bxMBaHVw3KmM32